--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,6 +5,7 @@
     %th Name
     %th Type
     %th Abbreviation
+    %th Qty
     %th
     %th
     %th
@@ -14,6 +15,7 @@
       %td= product.name
       %td= product.type
       %td= product.get_sku
+      %td= product.qty
       %td= link_to 'Show', product
       %td= link_to 'Edit', edit_product_path(product)
       %td= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }
