--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -15,4 +15,4 @@
 
 = link_to 'Edit', edit_store_product_path(@store,@product)
 \|
-= link_to 'Back', products_path
+= link_to 'Back', store_path(@store)
