--- a/app/views/stores/index.html.haml
+++ b/app/views/stores/index.html.haml
@@ -1,11 +1,11 @@
 %h1 Listing stores
 %hr
 - @stores.each do |store|
-    %h2= store.name
-    %td= link_to 'Show', store
-    %td= link_to 'Edit', edit_store_path(store)
-    %td= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' }
+		%h2= store.name
+		%td= link_to 'Show', store, :class => "btn-primary btn btn-small"
+		%td= link_to 'Edit', edit_store_path(store), :class => "btn-info btn btn-small"
+		%td= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn-warning btn btn-small"
 
 %br
-
-= link_to 'New Store', new_store_path
+%br
+= link_to 'New Store', new_store_path, :class => "btn-success btn pull-right btn-large"
